// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model User {
  id        Int       @id @default(autoincrement())
  name      String
  lastname  String
  email     String    @unique
  password  String
  confirmed Boolean?  @default(false)
  role      String?   @default("user")
  createdAt DateTime  @default(now())
  product   Product[]
}

model Product {
  id          Int       @id @default(autoincrement())
  name        String
  description String?
  price       Float
  stock       Int?      @default(0)
  image       String    @default("https://via.placeholder.com/150")
  categoryId  Int?
  category    Category? @relation(fields: [categoryId], references: [id])
  authorId    Int
  author      User      @relation(fields: [authorId], references: [id])
  createdAt   DateTime  @default(now())
}

model Category {
  id          Int       @id @default(autoincrement())
  name        String
  description String
  published   Boolean
  products    Product[]
}
