//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  name String [not null]
  lastname String [not null]
  email String [unique, not null]
  password String [not null]
  confirmed Boolean [default: false]
  role String [default: 'user']
  createdAt DateTime [default: `now()`, not null]
  product Product [not null]
}

Table Product {
  id Int [pk, increment]
  name String [not null]
  description String
  price Float [not null]
  stock Int [default: 0]
  image String [not null, default: 'https://via.placeholder.com/150']
  categoryId Int
  category Category
  authorId Int [not null]
  author User [not null]
  createdAt DateTime [default: `now()`, not null]
}

Table Category {
  id Int [pk, increment]
  name String [not null]
  description String [not null]
  published Boolean [not null]
  products Product [not null]
}

Ref: Product.categoryId > Category.id

Ref: Product.authorId > User.id